// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination on iOS renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 15,
            "paddingTop": 4,
          },
        ]
      }
    >
      Showing 1 - 20 of 21 results
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#dbdbdb",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View />
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": 10,
              "marginRight": 12,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginRight": 10,
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Next
            </Text>
          </Text>
          <svg
            height={12}
            style={Object {}}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
              style={Object {}}
            >
              <path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
                style={Object {}}
              />
            </g>
          </svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Pagination on iOS renders next link 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 15,
            "paddingTop": 4,
          },
        ]
      }
    >
      Showing 1 - 20 of 41 results
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#dbdbdb",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View />
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": 10,
              "marginRight": 12,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginRight": 10,
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Next
            </Text>
          </Text>
          <svg
            height={12}
            style={Object {}}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
              style={Object {}}
            >
              <path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
                style={Object {}}
              />
            </g>
          </svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Pagination on iOS renders prev and next link 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 15,
            "paddingTop": 4,
          },
        ]
      }
    >
      Showing 21 - 40 of 41 results
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#dbdbdb",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": 10,
            }
          }
        >
          <svg
            height={12}
            style={Object {}}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
              style={Object {}}
            >
              <path
                d="M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z"
                style={Object {}}
              />
            </g>
          </svg>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginLeft": 10,
                "textAlign": "left",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Previous
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": 10,
              "marginRight": 12,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginRight": 10,
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Next
            </Text>
          </Text>
          <svg
            height={12}
            style={Object {}}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
              style={Object {}}
            >
              <path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
                style={Object {}}
              />
            </g>
          </svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Pagination on iOS renders prev link 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 15,
            "paddingTop": 4,
          },
        ]
      }
    >
      Showing 41 - 41 of 41 results
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#dbdbdb",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": 10,
            }
          }
        >
          <svg
            height={12}
            style={Object {}}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
              style={Object {}}
            >
              <path
                d="M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z"
                style={Object {}}
              />
            </g>
          </svg>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginLeft": 10,
                "textAlign": "left",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Previous
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View />
  </View>
</View>
`;

exports[`Pagination on iOS renders results message 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 15,
            "paddingTop": 4,
          },
        ]
      }
    >
      Showing 1 - 20 of 21 results
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#dbdbdb",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View />
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": 10,
              "marginRight": 12,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginRight": 10,
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Next
            </Text>
          </Text>
          <svg
            height={12}
            style={Object {}}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
              style={Object {}}
            >
              <path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
                style={Object {}}
              />
            </g>
          </svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Pagination on iOS renders with hidden results 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#dbdbdb",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View />
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": 10,
              "marginRight": 12,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginRight": 10,
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Next
            </Text>
          </Text>
          <svg
            height={12}
            style={Object {}}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
              style={Object {}}
            >
              <path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
                style={Object {}}
              />
            </g>
          </svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;
